engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/modal.less
.js--modal {
    .transition(all 0.5s);
    .box-shadow(0px 0px 0px 7px rgba(0, 0, 0, 0.25));
    .box-sizing(content-box);
    .opacity(0);
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    background: padding-box #fff;
    max-height: 100%;
    max-width: 100%;
    z-index: 7000;
    overflow-x: hidden;
    overflow-y: auto;

    .header {
        .unitize-padding(10, 10, 10, 10);
        .unitize-height(42, 16);
        border-bottom: 1px solid @border-color;

        .title {
            .unitize(16, 16, font-size);
            font-weight: 700;
        }
    }

    .modal--close {
        .unitize-height(30, 16);
        .unitize-width(30, 16);
        .unitize(30, 16, line-height);
        .unitize(10, 16, font-size);
        .unitize(10, 16, right);
        .unitize(7, 16, top);
        padding: 0;
        text-align: center;
        position: absolute;
    }

    .content {
        width: 100%;
        height: 100%;
        position: relative;
        overflow: auto;

        .content--iframe {
            .unitize-padding(10, 10, 10, 10);

            width: 100%;
            height: 100%;
            border: 0 none;
            display: block;
        }
    }

    &.sizing--auto.is--fullscreen {
        height: 100% !important;
        width: 100% !important;
    }

    &.sizing--fixed {
        max-height: none !important;
        max-width: none !important;
    }

    &.sizing--content {
        position: fixed;
        bottom: auto;
        top: auto;
        height: auto;
    }

    &.no--header {
        .header {
            display: none;
        }
    }

    &.no--border-radius {
        border-radius: 0;
    }
}

@media screen and(min-width: @tabletViewportWidth) {
    .js--modal {
        .border-radius(3px);
    }
}

